# aoc

2023/: aoc2023.cabal  base.hs  create_day.sh
2023/day01/: Main.hs
2023/day02/: Cargo.toml
2023/day02/src/: main.rs
2024/2024/day-01/: day-1.hs
2024/2024/day-02/: day-2.hs
2024/2024/day-03/: day-3.hs
2024/2024/day-04/: day-4.hs
2024/2024/day-05/: day-5.hs
2024/2024/day-06/: day-6.hs
2024/2024/day-07/: day-7.hs
2024/2024/day-08/: day-8.hs
2024/2024/day-09/: day-9.hs
2024/2024/day-10/: day-10.hs
2024/2024/day-11/: day-11.hs
2024/2024/day-12/: day-12.cabal  day-12.hs
2024/2024/day-13/: 2  day-13.hs
2024/2024/day-14/: day-14.hs
2024/2024/day-15/: day-15.cabal  day-15.hs
2024/2024/day-16/: day-16.cabal  day-16.hs  test.py
2024/2024/day-17/: day-17.hs  test
2024/2024/day-18/: day-18.cabal  day-18.hs
2024/2024/day-19/: day-19.cabal  day-19.hs
2024/2024/day-20/: day-20.cabal  day-20.hs
2024/2024/day-21/: day-21.py
2024/2024/day-22/: day-22.cabal  day-22.hs  test.py
2024/2024/day-23/: day-23.cabal  day-23.hs
2024/2024/day-24/: day-24.cabal  day-24.hs  part2.dot
2024/2024/day-25/: day-25.cabal  day-25.hs
2024/2024/libs/: MemoMap.hs  Search.hs
2025/: +  Cargo.toml  new_day.sh
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs
