cabal-version: 3.4
name: aoc2023
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
      -- For shared utilities (if any)
  hs-source-dirs:
      -- You can use "src" for reusable/shared code
  build-depends:
      base >=4.14 && <5
  default-language: Haskell2010

executable day01
  main-is: Main.hs
  hs-source-dirs: day01
  build-depends:
      base >=4.14 && <5,
      aoc2023,
      text 
  default-language: Haskell2010

-- Add executables here

